--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private":true,
   "contributors": [],
   "dependencies": {
+    "bcrypt": "0.7.x",
     "ejs":"0.8.x",
     "express": "3.0.x",
     "mongodb":"1.3.x"
